Add .well-known redirects

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,6 +1,7 @@
 server.port = 8800
 
 server.modules = (
+    "mod_redirect",
     "mod_access",
     "mod_fastcgi"
 )
@@ -29,9 +30,15 @@ fastcgi.server = ( ".php" => ((
 
 url.access-deny = ( "~", ".inc", ".sqlite", ".sh", ".ht" )
 
-$HTTP["url"] =~ "/(\.ht|config.js|changelog)/" {
+$HTTP["url"] =~ "/(config.js|changelog)/" {
     url.access-deny = ("")
 }
+
+# well-known redirects
+url.redirect = (
+    "^/.well-known/caldav"  => "/baikal/html/dav.php",
+    "^/.well-known/carddav" => "/baikal/html/dav.php"
+)
 
 # debug.log-request-handling = "enable"
 
