--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,11 @@ services:
     restart: always
     image: bianjp/mariadb-alpine:latest
     environment:
-      MYSQL_ROOT_PASSWORD: 'mysql'
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-mysql}
       MYSQL_RANDOM_ROOT_PASSWORD: 1
-      MYSQL_DATABASE: 'baikal'
-      MYSQL_USER: 'baikal'
-      MYSQL_PASS: 'baikal'
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-baikal}
+      MYSQL_USER: ${MYSQL_USER:-baikal}
+      MYSQL_PASS: ${MYSQL_PASS:-baikal}
     volumes:
       - baikal-mysql:/var/lib/mysql
 volumes:
