--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -8,8 +8,11 @@ server.modules = (
 
 include "mime-types.conf"
 
-server.username      = "lighttpd"
-server.groupname     = "lighttpd"
+server.username      = "nobody"
+server.groupname     = "nobody"
+### only root can use these options
+#server.chroot              = "/"
+
 server.document-root = "/var/www"
 index-file.names     = ("index.html", "index.php")
 
@@ -41,14 +44,3 @@ url.redirect = (
 )
 
 # debug.log-request-handling = "enable"
-
-### only root can use these options
-#
-# chroot() to directory (default: no chroot() )
-#server.chroot              = "/" 
-
-## change uid to <uid> (default: don't care)
-#server.username            = "nobody" 
-
-## change uid to <uid> (default: don't care)
-#server.groupname           = "nobody" 
